--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@
 baseurl = "https://squid233.github.io/"
 languageCode = "zh-cn"
 paginate = 5
-title = "squid233的博客"
+title = "squid233's Blog"
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn, zh-tw, es, de, nl, it, th, el, uk, ar
