--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,3 +14,6 @@ hasCJKLanguage = true
 
 # Change it to your Disqus shortname before using
 disqusShortname = "squid233-github-io"
+
+[frontmatter]
+lastmod = [":fileModTime", "lastmod"]
