--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,7 +1,7 @@
 # Change baseurl before deploy
 baseurl = "https://squid233.github.io/"
 languageCode = "zh-cn"
-paginate = 5
+paginate = 7
 title = "squid233's Blog"
 
 # Theme i18n support
@@ -15,5 +15,8 @@ hasCJKLanguage = true
 # Change it to your Disqus shortname before using
 disqusShortname = "squid233-github-io"
 
+enableGitInfo = true
+TimeZone = "Asia/Shanghai"
+
 [frontmatter]
-lastmod = [":fileModTime", "lastmod"]
+lastmod = [":git", "lastmod"]
