--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,9 +18,10 @@ emoji = "🍥"
 [sidebar.avatar]
 enabled = true
 local = true
-src = "img/avatar.png"
+src = "img/avatar.jpg"
 
 [article]
+headingAnchor = true
 math = false
 readingTime = true
 wordCount = true
