--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,7 +1,6 @@
 # Change baseurl before deploy
 baseurl = "https://squid233.github.io/"
 languageCode = "zh-cn"
-paginate = 7
 title = "squid233's Blog"
 
 # Theme i18n support
@@ -20,3 +19,6 @@ TimeZone = "Asia/Shanghai"
 
 [frontmatter]
 lastmod = [":git", "lastmod"]
+
+[pagination]
+pagerSize = 7
